Fixed display on Firefox with dark GTK theme

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -7,6 +7,9 @@ body {
 	background-color: white;
   overflow-x: hidden;
 }
+input{
+	color: black;
+}
 
 td{
 	text-align: left;
